Merge the separate layers into one layer and improve UI
	* Multiple issues in the same spot are shown together
	* It should be easier to add additional geojson error sources
	* Some performance improvements

Signed-off-by: Taylor Smock <taylor.smock@kaartgroup.com>